<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Droid Cafe</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="intro_text">Droid Dessert</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="donuts_are_glazed_and_sprinkled_with_candy">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches_have_chocolate_wafers_and_vanilla_filling">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_is_premium_self_serve_frozen_yogurt">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_message">You ordered a donut</string>
    <string name="ice_cream_order_message">You ordered a ice cream sandwich</string>
    <string name="froyo_order_message">You order a froyo</string>

    <string name="name_label_text">Nama</string>
    <string name="enter_name_hint">Masukan Nama Anda</string>

    <string name="address_label_text">Alamat</string>
    <string name="enter_address_hint">Masukan Alamat Anda</string>

    <string name="phone_label_text">Nomor</string>
    <string name="enter_phone_hint">Masukan Nomor Anda</string>

    <string-array name="label_array">
        <item>Indonesia +62</item>
        <item>Amerika +1</item>
        <item>Britania Raya +44</item>
        <item>Prancis +33</item>
    </string-array>

</resources>